Exception handling & Bug fixes in FIFO & Better Id deduction & Better utils & Unnecessary and old files removed m.m WIP